docs: link to repo and license

--- a/index.html
+++ b/index.html
@@ -20,10 +20,14 @@
   <main>
     <textarea 
         id="RESULT"
-        placeholder="Import a configuration file and we'll show it here."
+        placeholder="Import a configuration file to see it here."
         autocomplete="off"
     ></textarea>
   </main>
+  <footer>
+    [ <a href="https://github.com/jahed/tp-link-config-editor">Source code</a> ]
+    [ <a href="https://github.com/jahed/tp-link-config-editor/LICENSE">Terms of use</a> ]
+  </footer>
   <script src="./vendor/crypto-js.js"></script>
   <script type="module" src="./index.js"></script>
 </body>
