docs: fix link, clarify instructions

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   <main>
     <textarea 
         id="RESULT"
-        placeholder="Import a configuration file to see it here."
+        placeholder="Import your router configuration file (config.bin) to see it here. Make your changes, then export it back out."
         autocomplete="off"
     ></textarea>
   </main>
