--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
   </main>
   <footer>
     [ <a href="https://github.com/jahed/tp-link-config-editor">Source code</a> ]
-    [ <a href="https://github.com/jahed/tp-link-config-editor/LICENSE">Terms of use</a> ]
+    [ <a href="./LICENSE.txt">Terms of use</a> ]
   </footer>
   <script src="./vendor/crypto-js.js"></script>
   <script type="module" src="./index.js"></script>
