docs: mention client-side nature

--- a/index.html
+++ b/index.html
@@ -20,7 +20,9 @@
   <main>
     <textarea 
         id="RESULT"
-        placeholder="Import your router configuration file (config.bin) to see it here. Make your changes, then export it back out."
+        placeholder="Import your router configuration file (config.bin) to see it here. Make your changes, then export it back out.
+
+This editor is completely client-side. Your configuration is not sent anywhere so your passwords should be safe."
         autocomplete="off"
     ></textarea>
   </main>
