feat: maintain endianness on export

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
       <button id="EXPORT">Export</button>
       <button id="DISCARD">Discard</button>
       <input id="FILE" type="file" accept=".bin" autocomplete="off" hidden />
+      <input id="LITTLE_ENDIAN" type="checkbox" autocomplete="off" hidden />
     </div>
   </header>
   <main>
