docs: clarify third-party nature

--- a/index.html
+++ b/index.html
@@ -23,7 +23,9 @@
   <main>
     <textarea id="RESULT" placeholder="Import your router configuration file (config.bin) to see it here. Make your changes, then export it back out.
 
-This editor is completely client-side. Your configuration is not sent anywhere so your passwords should be safe."
+Imports and exports are completely client-side. Your configuration is not sent outside of your web browser.
+
+This website is not endorsed by TP-Link. Any damage caused by invalid configuration is your own responsibility! Use at your own risk."
       autocomplete="off"></textarea>
   </main>
   <footer>
