feat: add favicon

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <title>TP-Link Router Config Editor</title>
   <meta name="description"
     content="A web interface to edit TP-Link Router Config export files (typically named config.bin).">
+  <link rel="shortcut icon" href="./favicon.ico">
   <link rel="stylesheet" href="./index.css" type="text/css">
 </head>
 
