--- a/public/index.html
+++ b/public/index.html
@@ -31,7 +31,7 @@ This website is not endorsed by TP-Link. Any damage caused by invalid configurat
   </main>
   <footer>
     [ <a href="https://github.com/jahed/tp-link-config-editor">Source code</a> ]
-    [ <a href="./LICENSE.txt">Terms of use</a> ]
+    [ <a href="https://github.com/jahed/tp-link-config-editor/blob/master/LICENSE.txt">Terms of use</a> ]
   </footer>
   <script src="./vendor/crypto-js.js"></script>
   <script type="module" src="./index.js"></script>
